--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
     "start": "react-native-scripts start",
+    "startServer": "nodemon server/server.js",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
@@ -19,7 +20,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
     "expo": "^23.0.4",
+    "express": "^4.16.2",
     "geographiclib": "^1.49.0",
     "geolib": "^2.0.24",
     "react": "16.0.0",
@@ -30,6 +34,8 @@
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.27",
     "react-navigation-slide-from-right-transition": "^1.0.4",
-    "stripe": "^5.4.0"
+    "stripe": "^5.4.0",
+    "stripe-client": "^1.1.3",
+    "tcomb-form-native": "^0.6.11"
   }
 }
