--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "geolib": "^2.0.24",
     "react": "16.0.0",
     "react-native": "0.50.3",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^0.19.0",
     "react-native-payments": "^0.4.0",
     "react-native-ui-kitten": "^3.0.0",
