--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^0.19.0",
     "react-native-payments": "^0.4.0",
+    "react-native-storage": "^0.2.2",
     "react-native-ui-kitten": "^3.0.0",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.27",
