--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "geolib": "^2.0.24",
     "react": "16.0.0",
     "react-native": "0.50.3",
+    "react-native-autocomplete-input": "^3.5.0",
     "react-native-elements": "^0.19.0",
+    "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-payments": "^0.4.0",
+    "react-native-popup-dialog": "^0.10.46",
     "react-native-ui-kitten": "^3.0.0",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.27",
