--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-credit-card-input": "^0.4.1",
+    "react-native-dismiss-keyboard": "^1.0.0",
     "react-native-elements": "^0.19.0",
     "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-payments": "^0.4.0",
