--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-autocomplete-input": "^3.5.0",
+    "react-native-charts": "^3.0.0",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^0.19.0",
     "react-native-google-places-autocomplete": "^1.3.6",
@@ -41,6 +42,7 @@
     "react-navigation-slide-from-right-transition": "^1.0.4",
     "stripe": "^5.4.0",
     "stripe-client": "^1.1.3",
-    "tcomb-form-native": "^0.6.11"
+    "tcomb-form-native": "^0.6.11",
+    "victory-native": "^0.16.6"
   }
 }
